--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,16 @@
 name = "error-ex"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["ICEFIR <icefir1996@gmail.com>"]
+categories = ["rust-patterns"]
+keywords = ["error", "error-handling", "macro"]
+license = "MIT"
+repository = "https://github.com/ICEFIR/error-ex"
+rust-version = "1.56"
 
 [dependencies]
 paste = "1.0.14"
+
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
+rustdoc-args = ["--generate-link-to-definition"]
