--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,8 +8,8 @@ on:
 name: Publish
 
 jobs:
-  publish:
-    name: Publish
+  test:
+    name: Test Suite
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
@@ -22,6 +22,31 @@ jobs:
           toolchain: stable
           override: true
 
-      - run: cargo publish --token ${CRATES_TOKEN}
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+
+      - name: Run cargo publish
+        uses: actions-rs/cargo@v1
+        with:
+          command: publish
+          args:  --token ${CRATES_TOKEN}
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
