--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -11,6 +11,9 @@ jobs:
   create-tag:
     name: "Create tag"
     runs-on: "ubuntu-latest"
+    permissions: write-all
+    needs:
+      - test
     steps:
       - name: "Check out the repo"
         uses: actions/checkout@v3
