--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
           profile: "minimal"
           toolchain: "stable"
@@ -29,7 +29,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
           profile: "minimal"
           toolchain: "stable"
@@ -46,7 +46,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
           profile: "minimal"
           toolchain: "stable"
@@ -66,7 +66,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
 
-      - uses: "actions-rs/toolchain@v1"
+      - uses: dtolnay/rust-toolchain@stable
         with:
           profile: "minimal"
           toolchain: "stable"
