--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -57,16 +57,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           profile: minimal
           toolchain: stable
           override: true
 
-      - name: Run cargo publish
-        uses: actions-rs/cargo@v1
-        with:
-          command: publish
-          args:  --token ${CRATES_TOKEN}
+      - run: cargo publish --token ${CRATES_TOKEN}
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
