--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,23 +5,6 @@ on:
   pull_request:
 
 jobs:
-  check:
-    name: "Cargo check"
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: "Check out the repo"
-        uses: actions/checkout@v3
-
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          profile: "minimal"
-          toolchain: "stable"
-          override: true
-
-      - uses: "actions-rs/cargo@v1"
-        with:
-          command: "check"
-
   test:
     name: "Cargo test"
     runs-on: "ubuntu-latest"
@@ -34,48 +17,7 @@ jobs:
           profile: "minimal"
           toolchain: "stable"
           override: true
-
-      - uses: "actions-rs/cargo@v1"
-        with:
-          command: "test"
-
-  fmt:
-    name: "Cargo format"
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: "Check out the repo"
-        uses: actions/checkout@v3
-
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          profile: "minimal"
-          toolchain: "stable"
-          override: true
-
-      - run: "rustup component add rustfmt"
-
-      - uses: "actions-rs/cargo@v1"
-        with:
-          command: "fmt"
-          args: "--all -- --check"
-
-  clippy:
-    name: "Cargo clippy"
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: "Check out the repo"
-        uses: actions/checkout@v3
-
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          profile: "minimal"
-          toolchain: "stable"
-          override: true
-
-      - run: "rustup component add clippy"
-
-      - uses: "actions-rs/cargo@v1"
-        with:
-          command: "clippy"
-          args: "-- -D warnings"
-
+      - run: cargo check
+      - run: cargo clippy
+      - run: cargo fmt
+      - run: cargo test --all-features
