--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,8 +8,9 @@ on:
     workflows: ["Tag"]
     types:
       - "completed"
-
 jobs:
+
+
   get-tag:
     name: "Get Tag From Package Version"
     runs-on: "ubuntu-latest"
@@ -47,6 +48,7 @@ jobs:
 
   release:
     name: Release
+    environment: Runner
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     needs:
       - "get-tag"
@@ -62,7 +64,8 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-
-      - run: cargo publish --token ${CRATES_TOKEN}
+      - name: Release to crates.io
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
+        run: cargo publish --token ${CRATES_TOKEN}
+
