--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,11 @@ jobs:
           profile: "minimal"
           toolchain: "stable"
           override: true
-      - run: cargo check
-      - run: cargo clippy
-      - run: cargo fmt
-      - run: cargo test --all-features
+      - name: Check
+        run: cargo check
+      - name: Clippy
+        run: cargo clippy
+      - name: Fmt
+        run: cargo fmt
+      - name: Test
+        run: cargo test --all-features
