--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: '0'
 
       - name: "Get tag"
         id: "pkg-version"
@@ -36,6 +37,8 @@ jobs:
     steps:
       - name: "Check out the repo"
         uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
 
       - name: "Create release"
         uses: taiki-e/create-gh-release-action@v1
@@ -57,6 +60,8 @@ jobs:
     steps:
       - name: "Checkout sources"
         uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
 
       - name: "Install stable toolchain"
         uses: dtolnay/rust-toolchain@stable
